# Flux-player

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  beta_evaluation_report.md  fix_accessibility.js  fix_css.js  latest_run_log.txt  start_dev.sh  uninstall.ps1  update_empty_state.js
.agents/: agent.md
.agents/skills/: skill_aesthetic_enforcer.md
.agents/workflows/: workflow_active_coding.md  workflow_initial_review.md  workflow_merge_and_sync.md  workflow_publish_release.md  workflow_reconstruct.md
.github/workflows/: ci.yml
docs/: AGENTIAL_DEVELOPMENT.md  ARCHITECTURE.md  DIRECTORY_STRUCTURE.md  ENGINEERING_STANDARD.md  FLUX_MASTER_GUIDE.md  HOTKEYS.md  PLAYLIST_ARCHITECTURE.md  PROJECT_CHARTER.md  PROMPT_FOR_BACKEND_DEVELOPER.md  PROMPT_FOR_PLAYER_ENGINE.md  RESPONSIVE_DESIGN.md  ROADMAP.md  SETTINGS_SPEC.md  SKILL_MAP.md  UX_JOURNEYS.md  deep_logic_supplement.md  forensic_blueprint.md  icon_forge.html
docs/planning/: SECOND_OPINION_PROMPT.md
flux-player/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
flux-player/src/: app.css  app.html
flux-player/src-tauri/: Cargo.toml  check_output.txt  error.txt  error_log.txt  tauri.conf.json
flux-player/src-tauri/assets/: LICENSE_NSIS.txt
flux-player/src-tauri/capabilities/: default.json
flux-player/src-tauri/icons/: icon.icns
flux-player/src-tauri/src/: lib.rs  main.rs  oshash.rs
flux-player/src-tauri/src/commands/: audio.rs  library.rs  mod.rs  settings.rs
flux-player/src-tauri/src/database/: connection.rs  init.rs  mod.rs  models.rs  queries.rs  schema.rs
flux-player/src-tauri/src/scanner/: crawler.rs  metadata.rs  mod.rs  tmdb.rs
flux-player/src-tauri/src/utils/: error.rs  folders.rs  mod.rs  os.rs
flux-player/src/lib/actions/: draggable.ts  tooltip.ts
flux-player/src/routes/: +layout.svelte  +page.svelte
verification/playwright/: playwright.config.ts
verification/playwright/tests/: verify_library.spec.ts
(+68 files in other folders)
