[package]
name = "flux-player"
version = "0.2.0"
license = "MIT"
description = "Flux Player: A high-performance, glassmorphic media suite for local and streaming content."
authors = ["Flux Development Team <flux@example.com>"]
repository = "https://github.com/flux-player/flux"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flux_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "=2.3.2", features = ["sqlite"] }
tauri-plugin-store = "=2.4.2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
dotenvy = "0.15"
lofty = "0.21"
walkdir = "2"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "=2.6.0"
urlencoding = "2"
tauri-plugin-fs = "=2.4.5"
thiserror = "1"
image = "0.25.10"
chrono = "0.4"
xcap = "0.9.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
